--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body >
 
-        <H3>NAME:ALONGE BALIQIS JUMOKE<br> <HR> JAMB REG:299773625BA <br><HR> DEPARTMENT:COMPUTER AND INFORMATION SCIENCE<BR><HR>LEVEL: 200 LEVEL PDP <BR><HR> PROGRAMME :BSC</H3><hr>
+        <H3>NAME:ALONGE BALIQIS JUMOKE<br> <HR> MATRIC NUMBER: 20D/7CS/00270 <br><HR> DEPARTMENT:COMPUTER AND INFORMATION SCIENCE<BR><HR>LEVEL: 200 LEVEL PDP <BR><HR> PROGRAMME :BSC</H3><hr>
 
 <center>
        <b><h1>CSC 207 ASSIGNMENT</h1></b>
